add an img tag completly

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
                 
-                
+            <img src="" alt="">  
             </ul>
             <img src="picture/p.png" alt="omage" id="capture3">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio voluptas nobis sed perspiciatis sint odio quos debitis vero similique, esse dolores, omnis harum ratione. Voluptate consectetur veritatis cumque illo magnam.</p>   </div>
